complete rework of css styling to get site to display correctly on mobile devices. reworked grid areas, added flexbox to many more elements, used relative sizing for many elements. small formatting change to underline headings in clueArea, and added photo of Trebek.

--- a/style.css
+++ b/style.css
@@ -6,77 +6,104 @@ body {
     background-color: rgba(8, 20, 132);
     color: whitesmoke;
     font-family: 'PT Serif', serif;
-    height: 100vh;
     display: grid;
-    grid-template-columns: repeat(6, 1fr);
-    grid-template-rows: repeat(8, auto);
+    grid-template-columns: repeat(1, 1fr);
+    grid-auto-rows: minmax(50px, auto);
 }
-h4 {
-    text-align: center;
-    font-size: 25px;
-}
+
 #topNav {
-    grid-area: 1/1/1/7;
     display: flex;
     align-items: center;
     justify-content: space-around;
     padding: 8px;
-    font-size: 20px;
+    font-size: 2.5vw;
     background-color: whitesmoke;
 }
 a {
     text-decoration: none;
+    font-family: Arial, Helvetica, sans-serif;
+}
+#titleContainer {
+    display: flex;
+    justify-content: center;
 }
 #titleText {
-    grid-area: 2/1/2/7;  
-    font-size: 40px;  
+    font-size: 7vw;  
+}
+#logoContainer {
+    display: flex;
+    justify-content: center;
 }
 #jLogo {
-    grid-area: 3/2/3/6;
-    width: 100%;
+    width: 90%;
     height: auto;
     border: 12px solid whitesmoke;
 }
 #description {
-    grid-area: 4/2/4/6;
     text-align: center;
-    font-size: 18px;
+    width: 75%;
+    margin: auto;
+    font-size: 3vw;
     padding: 10px;
 }
 #instructions {
-    grid-area: 5/3/5/5;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 65%;
+    margin: auto;
     border: 10px solid whitesmoke;
     border-radius: 30px;
     padding: 10px;
 }
 #instructionsHeading {
+    text-align: center;
+    font-size: 4.5vw;
     margin: 10px 0 0 0;
 }
+.instructionsList {
+    font-size: 3vw;
+}
 #buttons {
-    grid-area: 6/3/6/5;
-    padding: 17px;
+    padding: 2vw;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
+    margin: auto;
+    width: 70%;
 }
 #getClue, #getAnswer, #reset {
-    padding: 13px 23px;
+    padding: 3vw 4vw;
     border-radius: 20px;
-    font-size: 20px;
+    font-size: 2.5vw;
     font-weight: 600;
-}
-#clueArea {
-    grid-area: 7/3/7/5;
 }
 .clueArea {
     font-family: Arial, Helvetica, sans-serif;
-    padding: 40px;
+    display: flex;
+    flex-direction: column;
+    margin: auto;
+    width: 90%;
+    padding: 15px 20px 0 40px;
     border: 10px solid whitesmoke;
     border-radius: 30px;
+    font-size: 3vw;
+}
+#trebek {
+    display: flex;
+    justify-items: center;
+    margin: auto;
+    padding: 20px 0 0 0;
+    
 }
 #btmnav {
-    grid-area: 8/1/8/7;
-    height: 150px;
+    height: 10vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+    margin: auto;
+    font-size: 1vw;
 }
 #titleText, #jLogo {
     display: flex;
